--- a/pages_html/parcours.html
+++ b/pages_html/parcours.html
@@ -74,6 +74,7 @@
             <strong>2025</strong> à l’Institut International de Technologie (<a
               href="https://iit.tn"
               target="_blank"
+              id="lien-iit"
               >IIT</a
             >).
           </p>
